# Tradevo

./: ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  ENVIRONMENT.md  README.md  RELEASE.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_users_table.py  002_market_tables.py  003_portfolio_tables.py  004_learning_tables.py  005_research_tables.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/middleware/: logging.py  rate_limit.py  request_id.py  security.py
backend/app/api/schemas/: research.py  watchlist.py
backend/app/api/v1/: auth.py  companies.py  infra.py  intelligence.py  learning.py  market.py  portfolio.py  research.py  transactions.py  watchlist.py
backend/app/config/: ai.py  cache.py  database.py  integrations.py  observability.py  rate_limit.py
backend/app/core/: sanitizer.py  utils.py
backend/app/integrations/: base.py
backend/app/integrations/llm/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  mock.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
backend/app/integrations/market/: alpha_vantage.py  base.py  factory.py  mock.py  yahoo_finance.py
backend/app/integrations/news/: base.py  factory.py  mock.py  newsapi_provider.py
backend/app/modules/ai/: __init__.py  composer.py  decision_hook.py  models.py  prompt_registry.py  provider_factory.py  provider_manager.py  request_manager.py  telemetry.py
backend/app/modules/auth/: __init__.py  models.py
backend/app/modules/learning/: events.py  service.py
backend/app/modules/market/: __init__.py  models.py  repository.py  service.py
backend/app/modules/portfolio/: __init__.py  events.py  service.py  trade_service.py
backend/app/modules/research/: assembler.py  events.py  models.py  (+2 more)
backend/app/observability/: health.py  logging.py  metrics.py  middleware.py  tracing.py
backend/app/scheduler/: __init__.py  jobs.py
backend/app/workers/: base.py
backend/scripts/: seed_market_data.py
backend/scripts/seeders/: companies.py  market.py  news.py
backend/tests/unit/: test_ai_execution_platform.py  test_learning_service.py  test_market_service.py  test_milestone_7_1.py  test_milestone_8.py
backend/tradevo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+302 files in other folders)
