[project]
name = "tradevo-backend"
version = "1.0.0"
description = "Tradevo — AI-powered virtual investment learning platform (backend)"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "asyncpg>=0.30.0,<1.0",
    "alembic>=1.14.0,<2.0",

    # Configuration & Validation
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
    "email-validator>=2.2.0,<3.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0,<4.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "bcrypt<4.1",

    # Security
    "python-multipart>=0.0.18,<1.0",

    # Observability
    "structlog>=24.4.0,<25.0",

    # Development / Testing
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "httpx>=0.28.0,<1.0",
    "aiosqlite>=0.20.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0,<1.0",
    "mypy>=1.13.0,<2.0",
    "pytest-cov>=6.0.0,<7.0",
    "aiosqlite>=0.20.0,<1.0",
]
ai = [
    "openai>=1.58.0,<2.0",
    "anthropic>=0.42.0,<1.0",
    "google-genai>=1.0.0,<2.0",
]
observability = [
    "prometheus-client>=0.21.0,<1.0",
    "opentelemetry-api>=1.28.0,<2.0",
    "opentelemetry-sdk>=1.28.0,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0,<2.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = ["E501", "B008", "N815"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["passlib.*", "alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]